# ramus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
arbiter/: Cargo.toml  config.json  costs.json
arbiter/src/: cli.rs  config.rs  costs.rs  main.rs  report.rs  trace.rs
arbiter/src/predictors/: always_taken.rs  coin_random.rs  global_direct.rs  global_flag.rs  global_select.rs  global_share.rs  last_outcome.rs  mod.rs  never_taken.rs  smith_bimodal.rs
src/: common.rs  lib.rs  observability.rs  simulator.rs
src/primitives/: array.rs  mod.rs  register.rs  value.rs
