# Copyright 2026 Ramus
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Kirill Bezuglyi <fidelicura@gmail.com>", "et al."]
categories = ["simulation", "emulation", "algorithms"]
description = "Trace-driven branch predictor evaluation framework for research and simulation"
documentation = "https://docs.rs/ramus"
edition = "2024"
rust-version = "1.88"
homepage = "https://github.com/fidelicura/ramus"
license = "Apache-2.0"
name = "ramus"
readme = "README.md"
repository = "https://github.com/fidelicura/ramus"
version = "0.0.0"

[workspace]
members = ["arbiter"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
parallel = []
serde = ["dep:serde"]

[profile.bench]
inherits = "release"
debug = "full"
